--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -1,13 +1,25 @@
 .sidebar {
-    width: 250px;
-    height: 100%;
-    background-color: #333;
+    background-color: #000;
+    color: white;
     position: fixed;
     top: 0;
     left: 0;
-    overflow-x: hidden;
-    padding-top: 20px;
-    color: white;
+    width: 200px;
+    height: 100%;
+    overflow-y: auto; /* Enable scrolling since page is longer */
+    transition: width 0.2s;
+  }
+
+  
+
+  button{
+    margin:1em;
+    border-radius:10px;
+  }
+
+
+  .sidebar:hover {
+    width: 250px; /* Expand when user hovers */
   }
   
   .logo {
@@ -19,15 +31,18 @@
   
   .nav-links {
     list-style-type: none;
-    padding: 0;
+    display:flex;
+    flex-direction:column;
   }
   
   .nav-links li {
     padding: 10px;
     text-align: center;
+    font-size: 15px;
+    font-weight:bold;
   }
   
   .nav-links li:hover {
-    background-color: #555;
+    background-color: #333; /* Darker background on hover */
   }
   
