--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,23 @@
     transform: rotate(360deg);
   }
 }
+
+.main-title{
+  margin-top:20%;
+}
+
+.center-box {
+  width: 80%; 
+  max-width: 400px; 
+  margin: 0 15%; 
+  padding: 10px; 
+  text-align: center;
+  border: 2px solid #333;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.lake{
+  align-items: right;
+}
