--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,6 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
 .App-link {
   color: #61dafb;
 }
@@ -53,6 +52,7 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
-.lake{
-  align-items: right;
+.main-img{
+  max-width: 100px;
+
 }
