--- a/src/App.css
+++ b/src/App.css
@@ -18,11 +18,9 @@ body{
   font-family: 'Bricolage Grotesque', sans-serif;
 }
 
-.center-box {
-  width: 80%; 
-  max-width: 400px; 
+.center-box { 
+  max-width: 450px; 
   margin: 0 15%; 
-  padding: 10px; 
   text-align: center;
   border-radius: 10px;
   background-color: #FFF6EE;
@@ -32,30 +30,23 @@ body{
 
 .main-img-group{
   display: flex;
-  justify-content: space-around; /* Adjust to 'space-between' for more spacing between images */
-  align-items: center;
-  width: 100%; /* Adjust the width as needed */
-  max-width: 800px; /* Set a maximum width for responsiveness */
-  margin: 0 auto; /* Center the container horizontally */
+  position:relative;
+  padding: 15px;
+  top:20px;
+  margin: 15%;
+  right:100px;
+  width: 100%; 
+  max-width: 800px; 
+  margin: 0 auto;
 
 }
 
 .main-img {
-  height: 300px;
-  align-items: right;
-  border-radius:10px;
-}
-
-.secondary-img{
-  max-width: 100px;
-}
-
-
-.main-image {
-  width: 100px; /* Adjust the image size as needed */
-  height: 100px;
-  margin: 0 20px; /* Adjust the margin to control the spacing */
+  width: 250px; /* Adjust the image size as needed */
+  height: 400px;
+  margin: 1em; /* Adjust the margin to control the spacing */
   text-align: center;
+  border-radius: 10px;
 }
 
 .image img {
@@ -63,4 +54,42 @@ body{
   max-height: 100%;
   display: block;
   border-radius: 50%;
+}
+
+.combined-container{
+  display:flex;
+  flex-direction: row;
+}
+
+
+.mainbutton {
+  background-color: #A53258;
+  color: #FFFFFF;
+  padding: 12px 24px; 
+  font-size: 16px; 
+  border: none;
+  border-radius: 5px; 
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin:1em; 
+}
+
+.mainbutton:hover {
+  background-color: #A53258;
+}
+
+.secondary-img-group{
+  display:flex;
+  position:relative;
+  right:100px;
+  width:50%;
+  margin:auto;
+
+}
+
+.secondary-img{
+  margin:2em;
+  width:250px;
+  height:250px;
+  padding: 20px;
 }
