--- a/src/searchbar.css
+++ b/src/searchbar.css
@@ -1,16 +1,33 @@
 /* SearchBar.css */
+.homebuttons {
+  background-color: #A53258;
+  color: #FFFFFF;
+  padding: 12px 24px; 
+  font-size: 16px; 
+  border: none;
+  border-radius: 5px; 
+  cursor: pointer;
+  transition: background-color 0.3s ease; 
+}
+
+.homebuttons:hover {
+  background-color: #A53258;
+}
+
+
+
 
 .search-bar {
     position: fixed;
     bottom: 10%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(255, 255, 255, 0.9); /* Slightly more opaque background */
+    background-color: #FFFFFF;
     padding: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     display: flex;
-    align-items: center; /* Vertically center input and button */
-    border-radius: 30px; /* Increased border-radius for smoother corners */
+    align-items: center;
+    border-radius: 30px;
   }
   
   input[type="text"] {
@@ -24,17 +41,17 @@
   }
   
   button {
-    background-color: #007bff;
+    background-color: #A53258;
     color: #fff;
     border: none;
-    padding: 12px 24px; /* Slightly larger padding */
+    padding: 12px 24px;
     cursor: pointer;
-    border-radius: 30px; /* Rounded corners */
-    font-size: 16px; /* Increased font size */
+    border-radius: 30px;
+    font-size: 16px;
   }
   
-  /* Hover effect for the button */
+
   button:hover {
-    background-color: #0056b3; /* Darker blue on hover */
+    background-color: #A53258;
   }
   
