--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -10,8 +10,6 @@
     transition: width 0.2s;
   }
 
-
-
   .homebuttons {
     background-color: #A53258;
     color: #FFFFFF;
@@ -24,12 +22,12 @@
   }
   
   .homebuttons:hover {
-    background-color: #A53258; /* Darker color on hover */
+    background-color: #A53258;
   }
 
 
   .sidebar:hover {
-    width: 250px; /* Expand when user hovers */
+    width: 250px;
   }
   
   .logo {
@@ -56,4 +54,8 @@
     background-color: #333; /* Darker background on hover */
   }
   
+  .brand-logo{
+    width: 50px;
+    height:50px;
+  }
   
