--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,11 @@ body{
   background-color: #FFF6EE;
 }
 
-
 .main-title{
   margin-top:20%;
   color: #A53258;
   font-family: 'Bricolage Grotesque', sans-serif;
+  size: 2em;
 }
 
 .center-box { 
@@ -96,4 +96,12 @@ h3{
   width:250px;
   height:250px;
   padding: 20px;
+}
+
+
+.values-title{
+  position:relative;
+  margin-left:0 ;
+  color: #A53258;
+  font-family: 'Bricolage Grotesque', sans-serif
 }
